--- a/index.html
+++ b/index.html
@@ -4,55 +4,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
     <link rel="stylesheet" href="css/styles.css">
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.9/peer.min.js"></script>
-  <script src="js/scripts.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.9/peer.min.js"></script>
+    <script src="js/scripts.js"></script>
 </head>
 <body>
-  <div>
-    <!--Video area -->
     <div id="video-container">
-        Your Friend<video id="their-video" autoplay class="their-video"></video>
-        <video id="my-video" muted="true" autoplay class="my-video"></video> You
-    </div>
-
-    <!--Steps-->
-    <div>
-        <h2>Super-simple PeerJS Video Chat with Manual Signalling</h2>
-        
-        <!--Get local audio/video stream-->
-        <div id="getLocalSteam_1">
-            <p>Please click 'allow' on the top of the screen so we can access your webcam and microphone for calls</p>
-            <div id="step1-error">
-                <p>Failed to access the webcam and microphone. Make sure to run this demo on an http server and click allow when asked for permission by the browser.</p>
-                <a href="#" id="step1-retry" class="button">Try again</a>
+        <div class="video-port">
+            <div class="video-header">Local</div>
+                <video id="local" autoplay muted="true" poster="/images/4_3_placeholder.png"></video>
+            <div class="control-panel">
+                <div class="status"><span>Peer ID: </span><span id="local-id"></span></div>
+                <div class="status"><span>Status: </span><span id="local-status"></span></div>
+                <div class="status">
+                    <input id="call-id" type="text" />
+                    <button id="make-call">Make Call</button>
+                </div>
             </div>
         </div>
-
-        <!--Make calls to others-->
-        <div id="ShowRemoteConnectionPrompt_2">
-            <p>
-                Your id: <span id="my-id">...</span>
-            </p>
-            <p>
-                Share this id with others so they can call you.
-            </p>
-            <p>
-                <span id="subhead">Make a call</span>
-                <br>
-                <input type="text" placeholder="Call user id..." id="callto-id">
-                <a href="#" id="make-call">Call</a>
-            </p>
-        </div>
-
-        <!--Call in progress-->
-        <div id="HandleIncomingCall_3">
-            <p>
-                Currently in call with <span id="their-id">...</span>
-            </p>
-            <p>
-                <a href="#" id="end-call">End call</a>
-            </p>
+        <div class="video-port">
+            <div class="video-header">Remote</div>
+            <video id="remote" autoplay poster="/images/4_3_placeholder.png"></video>
+            <div class="control-panel">
+                <div class="status"><span>Peer ID: </span><span id="remote-id"></span></div>
+                <div class="status"><span>Status: </span><span id="remote-status"></span></div>
+                <div class="status">
+                    <button id="end-call">End Call</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
